changed package names to sportbuddy and improved input validation with feedback

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">Sportbuddy</string>
     <string name="title_activity_main">Sportbuddy</string>
-    <string name="package_name">app.meetmefit.sportbuddy</string>
-    <string name="custom_url_scheme">app.meetmefit.sportbuddy</string>
+    <string name="package_name">com.marko.jevtic.sportbuddy</string>
+    <string name="custom_url_scheme">com.marko.jevtic.sportbuddy</string>
 </resources>
